crates/test-files/fixtures/compile_errors/ctx_missing_create.fe
contract Foo {
    pub fn bar() {}
}

contract Bar {
    pub fn create_foo(ctx: Context) {
        Foo.create(0)
    }
    pub fn create_foo2(mut ctx: Context) {
      Foo.create(ctx, 0)
    }
}
